[gd_scene load_steps=7 format=3 uid="uid://cjb5sf04lvpfr"]

[ext_resource type="Texture2D" uid="uid://t7n25g7bmk2k" path="res://icon.svg" id="1_fke4s"]
[ext_resource type="Script" path="res://Objects/Player/player.gd" id="1_jhjqj"]
[ext_resource type="Texture2D" uid="uid://cvms0uy1be86i" path="res://Assets/radius.png" id="2_4dq2k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6qokj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2eqvl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_id8y5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_fke4s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_jhjqj")

[node name="PickupRadius" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="PickupRadius"]
modulate = Color(1, 1, 1, 0.172549)
scale = Vector2(0.65, 0.65)
texture = ExtResource("2_4dq2k")

[node name="Hitbox" type="CollisionShape2D" parent="PickupRadius"]
scale = Vector2(20, 20)
shape = SubResource("CircleShape2D_6qokj")

[node name="Hitbox" type="CollisionShape2D" parent="."]
scale = Vector2(6.36, 6.36)
shape = SubResource("RectangleShape2D_2eqvl")

[node name="MainSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_id8y5")

[connection signal="area_entered" from="PickupRadius" to="." method="_on_pickup_radius_area_entered"]
